Added some responsiveness

--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
         <h1 class="text-white text-6xl font-Bree mt-4">Shopping Cart</h1>
     </header>
 
-    <article id="cartArticle" class="relative border-[1px] border-black h-[70%] w-[60vw] mx-auto mt-[15vh] rounded-3xl shadow-info-grey shadow-lg p-[2%]">
+    <article id="cartArticle" class="relative border-[1px] border-black h-[70%] w-[60vw] mx-auto mt-[15vh] mb-[100px] rounded-3xl shadow-info-grey shadow-lg p-[2%]">
         <section id="cartItems" class="pb-[75px]">
             <div class="h-[70vh] relative">
                 <h3 class="absolute top-[100px] text-gray-400 text-6xl text-center font-Bree w-2/3 mx-[15%]">Your Cart Is Currently Empty</h3>
