--- a/italy.html
+++ b/italy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full m-0 p-0">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,17 +12,16 @@
     <link rel="stylesheet" href="./dist/output.css">
     <title>Fork Full of Italy</title>
 </head>
-<body>
+<body class="w-full m-0 p-0 relative ">
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
         <a href="./main.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
-        <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a>
         <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"><span class="material-symbols-outlined relative top-0.5">
             shopping_cart
             </span></button>
     </header>
 
     <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
-        <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg"src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/croppedshutterstock1829686103J2Y4jpg_245.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741082399">
+        <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg  max-[1100px]:h-[400px]"src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/croppedshutterstock1829686103J2Y4jpg_245.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741082399">
         <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
             <h2 class="text-[200%] font-semibold relative top-[-4px]">Fork Full of Italy</h2>
             <p class="font-bold text-info-grey relative left-[-5px]">Fork Full of Italy | 15.2 mi | $$$ | 4.94 <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"></p>
@@ -36,28 +35,26 @@
     <h3 id="top-ratings-header" class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline">Top Ratings</h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px] ">
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-          <h5 class="text-[22px] font-Bree">Keanu R.</h5>
+          <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Keanu R.</h5>
           <h6 class="mb-[5px] text-[14px]">
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
-            <span class="material-symbols-outlined">grade</span>
-            <span class="material-symbols-outlined">grade</span>
         </h6>
-          <p>Italian food done right!</p>
+          <p class="max-[1000px]:text-[12px]">Food got here fast. However, the driver wouldn't stop saying "Bobbidy Boopy".</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-            <h5 class="text-[22px] font-Bree">Steve W.</h5>
+            <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Steve W.</h5>
             <h6><span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
             </h6>
-            <p>It really tastes like Italy!</p>
+            <p class="max-[1000px]:text-[12px]">It really tastes like Italy!</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-            <h5 class="text-[22px] font-Bree">Freddie P.</h5>
+            <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Freddie P.</h5>
             <h6>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
@@ -65,7 +62,7 @@
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
             </h6>
-            <p>Best food I have had in a while!</p>
+            <p class="max-[1000px]:text-[12px]">This place has amazing food, for those days when the wait at Olive Garden is too long.</p>
         </div>
     </section>
 
@@ -79,13 +76,13 @@
             <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/images.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741876201">
-            <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Chicken Scallopine</h4>
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/liamallen34/Kachow_Images/chicken-scallopini-recipe-resize-2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669403888970">
+            <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Chicken Scallopini</h4>
             <p id="27.99" class="relative top-[10px] left-2 text-[20px]">$27.99</p>
             <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/Screen_Shot_2022-05-05_at_6.26.34_PM.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668741081699">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/liamallen34/Kachow_Images/exps88316_THCA153054B08_29_5b.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669404055711">
             <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Italian Casserole</h4>
             <p id="24.99" class="relative top-[10px] left-2 text-[20px]">$24.99</p>
             <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
@@ -97,9 +94,9 @@
             <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italy/chicken_tetrazzini.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668740032038">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/liamallen34/Kachow_Images/creamy-chicken-tetrazzini-170487-2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669403981992">
             <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Chicken Tetrazzini</h4>
-            <p id="5.50" class="relative top-[10px] left-2 text-[20px]">$5.50 lb</p>
+            <p id="5.50" class="relative top-[10px] left-2 text-[20px]">$5.50</p>
             <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
@@ -110,12 +107,13 @@
         </div>
     </article>
 
-    <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
-            <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">
-            Kachow Down Delivery
-        </h2>
+    <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <div class="absolute left-1/2 perfect-center top-[100px] flex">
+            <img class="relative top-[10px] bottom-2 h-[30px] invert max-[1100px]:h-[20px] max-[800px]:h-[15px]" src="./assets/images/pngwing.com.png">
+            <h2 class="text-white italic max-[1100px]:text-4xl max-[800px]:text-3xl">Kachow Down Delivery</h2>
+        </div>
     </footer>
+
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
