--- a/burger.html
+++ b/burger.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full m-0 p-0">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,16 +12,13 @@
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Bill's Burger Bar</title>
   </head>
-  <body>
+  <body class="w-full m-0 p-0 relative">
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
       <a href="./main.html">
         <h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl">
           <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>
           Kachow Down Delivery
         </h1>
-      </a>
-      <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">
-        Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span>
       </a>
       <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
@@ -31,13 +28,13 @@
     </header>
 
     <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
-      <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/burger_image2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669088599374"/>
+      <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg max-[1100px]:h-[400px]" src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/burger_image2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669088599374"/>
       <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
           Bill's Burger Bar
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Burgers and Sandwiches | 15.2 mi |$$| 4.7
+          Burgers and Sandwiches | 15.2 mi | $ | 4.7
           <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"/>
         </p>
       </div>
@@ -54,7 +51,7 @@
     </h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px]">
       <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-        <h5 class="text-[22px] font-Bree">Williams Ruths</h5>
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Williams Ruths</h5>
         <h6 class="mb-[5px] text-[14px]">
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
@@ -62,13 +59,13 @@
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>
-          Ordered the veggie burger with crab salad,hot tots and a frozen black
+        <p  class="max-[1000px]:text-[12px]">
+          Ordered the French Onion Burger with Hot Tots, and a frozen Black
           Irish to drink. Very good! Loved this place!
         </p>
       </div>
       <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-        <h5 class="text-[22px] font-Bree">Stephanie Dobbs</h5>
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Stephanie Dobbs</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
@@ -76,13 +73,13 @@
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>
+        <p  class="max-[1000px]:text-[12px]">
           Burgers and fries were fantastic. It's an added touch that they fancy
           up the fries like they do the burgers.
         </p>
       </div>
       <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-        <h5 class="text-[22px] font-Bree">Dunks I.</h5>
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Dunks I.</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
@@ -90,7 +87,7 @@
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>Absolutely one of the best restaurants in area and pet friendly.</p>
+        <p  class="max-[1000px]:text-[12px]">Absolutely one of the best restaurants in area, and pet friendly (I think).</p>
       </div>
     </section>
 
@@ -100,7 +97,7 @@
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
-          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Pizza/Burger/John_Boy___Billy_BBQ_Bacon_Burger.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669087855908"/>
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/liamallen34/Kachow_Images/image.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669404391923"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Taproom Bill's Burger
           </h4>
@@ -149,12 +146,13 @@
         </div>
       </article>
 
-      <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
-          <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png"/>
-          Kachow Down Delivery
-        </h2>
-      </footer>
+      <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <div class="absolute left-1/2 perfect-center top-[100px] flex">
+            <img class="relative top-[10px] bottom-2 h-[30px] invert max-[1100px]:h-[20px] max-[800px]:h-[15px]" src="./assets/images/pngwing.com.png">
+            <h2 class="text-white italic max-[1100px]:text-4xl max-[800px]:text-3xl">Kachow Down Delivery</h2>
+        </div>
+    </footer>
+
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/js/script.js"></script>
