--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="-space-y-px rounded-md shadow-sm">
               <div>
                 <label for="email-address" class="sr-only">Email address</label>
-                <input id="email-address" name="email" type="email" autocomplete="email" required class="relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-gray-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="kachowdeliv@nomail.com">
+                <input id="email-address" name="email" type="email" autocomplete="email" required class="relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-gray-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="youremail@email.com">
               </div>
               <div>
                 <label for="password" class="sr-only">Password</label>
@@ -49,7 +49,6 @@
             <div>
               <button type="button" id="signInBtn" class="group relative flex w-full justify-center rounded-md border border-transparent bg-header-grey py-2 px-4 text-sm font-medium text-white hover:bg-info-grey focus:outline-none focus:ring-2 focus:ring-gray-600 focus:ring-offset-2">
                 <span class="absolute inset-y-0 left-0 flex items-center pl-3">
-                  <!-- Heroicon name: mini/lock-closed -->
                   <svg class="h-5 w-5 text-info-grey group-hover:text-header-grey" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
                   </svg>
