--- a/main.html
+++ b/main.html
@@ -8,47 +8,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0" />
     <link rel="stylesheet" href="./dist/output.css">
     <title>Kachow Down Delivery</title>
 </head>
 <body class="w-full p-0 m-0">
-    <header>
-    <div class="">
+    <header class="relative justify-center">
         <img class="h-screen w-full" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1724611486.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619841318">
+        <h1 class="absolute left-1/3 bottom-[50%] font-Bree w-1/3 text-7xl text-white text-center max-[1100px]:text-6xl max-[900px]:text-5xl">
+            Fast food has never been faster
+        </h1>
+    <div class="absolute left-1/2 top-[59%] flex shrink perfect-center">
+        <img class="h-6 invert max-[1100px]:h-5" src="./assets/images/pngwing.com.png">
+        <h2 class="relative top-[-15px] text-white text-5xl font-Bree italic max-[1100px]:text-4xl max-[1100px]:top-[-11px] max-[900px]:text-3xl">Kachow Down Delivery</h2>
     </div>
-    <h1 class="font-Bree absolute w-1/3 left-1/3  top-1/3 text-7xl text-white text-center">
-        Fast food has never been faster
-    </h1>
-    <h2 class="absolute left-[37vw] top-[55%] text-white text-5xl font-Bree italic text-center"><img class="relative bottom-[-40px] left-[-40px] h-6 invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+        <button class="cartBtn absolute bg-white px-[65px] py-[10px] top-[70%] rounded-full left-1/2 perfect-center"><span class="material-symbols-outlined relative top-0.5">
+            shopping_cart
+          </span>
+        </button>
+    </div>
     </header>
     <h2 class="pop text-5xl underline decoration-[3px] font-Bree ml-[10%] mt-[20px]">Popular Near You</h2>
      <article class="flex flex-wrap absolute mt-[20px] px-[5%]">
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./veggy.html" ><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_598749548.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619841046" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Vinny's Veggies</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">10 mins | $0 delivery fee</p>
         </div>
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./southern.html"><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_285533255.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619841284" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Southern Delights</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">12 mins | $0 delivery fee</p>
         </div>
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./pizza.html"><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_225746563.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619841033" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Papa Perry's Pizza</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">8 mins | $0 delivery fee</p>
         </div>
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./seafood.html"><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1816011134.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619839459" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Captain Cliffs Fresh Seafood</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">21 mins | $0 delivery fee</p>
         </div>
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./burger.html"><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/334701605-huge.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668620257069" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Bill's Burger Bar</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">5 mins | $0 delivery fee</p>
         </div>
-        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110">
+        <div class="w-[450px] h-[300px] mt-5 mx-auto transition transform hover:scale-110 max-[1550px]:w-[400px] max-[1550px]:h-[375px] max-[1400px]:w-[350px] max-[1400px]:h-[300px] max-[1200px]:w-[450px] max-[1200px]:w-[400px] max-[940px]:w-[325px] max-[940px]:h-[250] max-[800px]:w-[450px] max-[800px]:h-[350px]">
             <a href="./italy.html"><img src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1206985765.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619838342" class="w-full h-[250px] rounded-xl shadow-info-grey shadow-md"></a>
             <h4 class="pb-1 pl-2.5 font-Roboto font-semibold text-[22px]">Fork Full of Italy</h4>
             <p class="pl-2.5 font-Roboto text-info-grey font-semibold text-sm">16 mins | $0 delivery fee</p>
@@ -71,7 +79,10 @@
         </div>
     </section>
     <footer class="absolute left-0 mt-[100px] bottom-0 text-center mt-[50px] h-52 font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-[8px] h-[30px] invert"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+    <div class="absolute flex left-1/2 perfect-center top-[100px]">
+        <img class="relative top-[10px] h-[30px] invert max-[1100px]:h-[20px] max-[800px]:h-[15px]"src="./assets/images/pngwing.com.png">
+        <h2 class="text-white italic max-[1100px]:text-4xl max-[800px]:text-3xl">Kachow Down Delivery</h2>
+    </div>
     </footer> 
 </article> 
 </body>
