--- a/southern.html
+++ b/southern.html
@@ -1,77 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  class="w-full m-0 p-0">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Roboto&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"/>
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Southern Delights</title>
   </head>
-  <body>
-    <header
-      class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]"
-    >
-      <a href="./index.html"
-        ><h1
-          class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"
-        >
-          <img
-            class="h-5 invert absolute top-[26px] left-5"
-            src="./assets/images/pngwing.com.png"
-          />Kachow Down Delivery
-        </h1></a
-      >
-      <a
-        class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer"
-        >Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a
-      >
-      <button
-        class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"
-      >
+  <body   class="w-full m-0 p-0 relative">
+    <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
+      <a href="./main.html">
+        <h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl">
+          <img class="h-5 invert absolute top-[26px] left-5" src="./assets/images/pngwing.com.png"/>Kachow Down Delivery
+        </h1>
+      </a>
+      <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none">
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
         </span>
       </button>
     </header>
 
-    <section
-      class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center"
-    >
-      <img
-        class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg"
-        src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/southern_food.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080381908"
-      />
-      <div
-        class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto"
-      >
+    <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
+      <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg max-[1100px]:h-[400px]" src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/southern_food.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080381908"/>
+      <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
           Southern Delights
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Salads,Shrimps,Steaks | 12.0 mi | $$$ | 4.1
-          <img
-            class="w-3 h-3 absolute bottom-[7px] right-[68px]"
-            src="./assets/images/star-grey-th.png"
-          />
+          Salads, Shrimps, Steaks | 12.0 mi | $$ | 4.1
+          <img class="w-3 h-3 absolute bottom-[7px] right-[-12px]" src="./assets/images/star-grey-th.png"/>
         </p>
       </div>
-      <div
-        class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl"
-      >
+      <div class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl">
         <h6 id="v-open-status" class="text-[200%] mb-[5px] font-semibold">
           Open
         </h6>
@@ -79,45 +45,35 @@
       </div>
     </section>
 
-    <h3
-      id="top-ratings-header"
-      class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline"
-    >
+    <h3 id="top-ratings-header" class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline">
       Top Ratings
     </h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px]">
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
-        <h5 class="text-[22px] font-Bree">Calvin P.</h5>
-        <h6 class="mb-[5px] text-[14px]">
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> grade </span>
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Calvin P.</h5>
+        <h6>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>Quality of food, decor, service and price was poor!.</p>
+        <p class="max-[1000px]:text-[12px]">Quality of food, decor, service and price was poor!.</p>
       </div>
-      <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
-        <h5 class="text-[22px] font-Bree">Rort IV Jean K</h5>
+      <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Rort IV Jean K.</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>
+        <p class="max-[1000px]:text-[12px]">
           Their burgers are good, and their salads even better. I ordered their
-          hot chicken, and it was VERY disappointing !
+          hot chicken, and it did not dissapoint!
         </p>
       </div>
       <div
-        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
-      >
-        <h5 class="text-[22px] font-Bree">Bugingo M.</h5>
+        class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
+        <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Bugingo M.</h5>
         <h6>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
@@ -125,88 +81,73 @@
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>Bbq shrimp app was good! You get about 5-6 shrimp</p>
+        <p class="max-[1000px]:text-[12px]">Bbq shrimp app was good! You get about 5-6 shrimp</p>
       </div>
     </section>
 
-    <section class="available-items">
+    <section class="available-items pb-[250px]">
       <h3 class="relative top-[-30px] font-Bree text-[40px] ml-[14%] underline">
         Available Items
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/BBQ_Shrimp.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080143688"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/BBQ_Shrimp.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080143688"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             BBQ Shrimp
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$18</p>
+          <p id="18.00" class="relative top-[10px] left-2 text-[20px]">$18</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/BREAUX_BROS_GUMB.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080143949"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/BREAUX_BROS_GUMB.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080143949" />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
-            BREAUX BROS GUMB
+            Breaux Bros Gumbo
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$21.99</p>
+          <p id="21.99" class="relative top-[10px] left-2 text-[20px]">$21.99</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/NEW_SOUTH_CAESAR.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141791"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/NEW_SOUTH_CAESAR.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141791"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
-            NEW SOUTH CAESAR
+            New South Caesar
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$13.99 Bowl</p>
+          <p id="13.99" class="relative top-[10px] left-2 text-[20px]">$13.99 | Bowl</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/SMOKED_BABY_BACK_RIBS_2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080145072"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/SMOKED_BABY_BACK_RIBS_2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080145072"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
-            SMOKED BABY BACK RIBS
+            Smoked Baby Back Ribs
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$18</p>
+          <p id="18.99" class="relative top-[10px] left-2 text-[20px]">$18.99</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/STEAK___BISCUIT_BENEDICT.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141312"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/STEAK___BISCUIT_BENEDICT.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141312"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
-            STEAK & BISCUIT BENEDICT
+            Steak & Biscuit Benedict
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$14</p>
+          <p id="14.00" class="relative top-[10px] left-2 text-[20px]">$14</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-          <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
-            src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/FRESH_CATCH_SANDWICH.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141317"
-          />
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+          <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/tsoc7yrwg/Southern_Delights/FRESH_CATCH_SANDWICH.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669080141317"/>
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
-            FRESH CATCH SANDWICH
+            Fresh Catch Sandwhich
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$12.99</p>
+          <p id="12.99" class="relative top-[10px] left-2 text-[20px]">$12.99</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey font-Bree">Add</button>
         </div>
       </article>
-      <footer
-        class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl"
-      >
-        <h2
-          class="inline-block absolute left-[37%] top-[35%] text-white italic"
-        >
-          <img
-            class="absolute left-[-50px] bottom-2 h-[30px] invert"
-            src="./assets/images/pngwing.com.png"
-          />Kachow Down Delivery
-        </h2>
-      </footer>
+      <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <div class="absolute left-1/2 perfect-center top-[100px] flex">
+            <img class="relative top-[10px] bottom-2 h-[30px] invert max-[1100px]:h-[20px] max-[800px]:h-[15px]" src="./assets/images/pngwing.com.png">
+            <h2 class="text-white italic max-[1100px]:text-4xl max-[800px]:text-3xl">Kachow Down Delivery</h2>
+        </div>
+    </footer>
+
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
