--- a/veggy.html
+++ b/veggy.html
@@ -15,17 +15,16 @@
 <body  class="w-full m-0 p-0 relative">
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
         <a href="./main.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
-        <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a>
         <button class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"><span class="material-symbols-outlined relative top-0.5">
             shopping_cart
             </span></button>
     </header>
 
-    <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center">
-        <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg"src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-wendy-wei-1656663.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619835914">
-        <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto">
+    <section class="inline-block w-[80%] mt-[100px] mr-[10%] ml-[10%] relative justify-center items-center ">
+        <img class="w-[80%] mr-[10%] ml-[10%] h-[650px] rounded-[18px] shadow-info-grey shadow-lg max-[1100px]:h-[400px]"src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-wendy-wei-1656663.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619835914">
+        <div class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto ">
             <h2 class="text-[200%] font-semibold relative top-[-4px]">Vinny's Veggies</h2>
-            <p class="font-bold text-info-grey relative left-[-5px]">Vinny's Veggies | 10.0 mi | $$ | 4.3 <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"></p>
+            <p class="font-bold text-info-grey relative left-[-5px] ">Vinny's Veggies | 10.0 mi | $$ | 4.3 <img class="w-3 h-3 absolute right-[-15px] bottom-[7px]" src="./assets/images/star-grey-th.png"></p>
         </div>
         <div class="inline-block relative h-[100px] top-[-118px] font-Roboto bg-white text-center pt-[10px] pr-[30px] pl-[30px] pb-[15px] ml-[5px] rounded-xl">
             <h6 id="v-open-status" class="text-[200%] mb-[5px] font-semibold">Open</h6>
@@ -36,36 +35,36 @@
     <h3 id="top-ratings-header" class="relative top-[-70px] font-Bree text-[40px] ml-[14%] underline">Top Ratings</h3>
     <section class="w-[80%] mx-[10%] flex justify-evenly relative top-[-50px] ">
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-          <h5 class="text-[22px] font-Bree">Stephanie K.</h5>
-          <h6 class="mb-[5px] text-[14px]">
+          <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Stephanie K.</h5>
+          <h6>
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
             <span class="material-symbols-outlined">grade</span>
         </h6>
-          <p>Asked for super fast delivery. Driver got here in ten minutes, restaurant was two states over. Not asking how. Five stars.</p>
+          <p class="max-[1000px]:text-[12px]">Asked for super fast delivery. Driver got here in ten minutes, restaurant was two states over. Not asking how. Five stars.</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-            <h5 class="text-[22px] font-Bree">Michael J.</h5>
+            <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Michael J.</h5>
             <h6>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
-            </h6>
-            <p>Food was awesome! Salad tasted great, and was perfect for my diet. Absolute slam dunk.</p>
+            </h6 class="max-[1000px]:text-[6px]" >
+            <p class="max-[1000px]:text-[12px]">Food was awesome! Salad tasted great, and was perfect for my diet. Absolute slam dunk.</p>
         </div>
         <div class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md">
-            <h5 class="text-[22px] font-Bree">Jenifer L.</h5>
+            <h5 class="text-[22px] font-Bree max-[1000px]:text-[17px]">Jenifer L.</h5>
             <h6>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
                 <span class="material-symbols-outlined">grade</span>
             </h6>
-            <p>Pretty much what you'd expect. A bowl full of plants. Not too bad overall.</p>
+            <p class="max-[1000px]:text-[12px]">Pretty much what you'd expect. A bowl full of plants. Not too bad overall.</p>
         </div>
     </section>
 
@@ -111,10 +110,10 @@
     </article>
 
     <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic">
-            <img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">
-            Kachow Down Delivery
-        </h2>
+        <div class="absolute left-1/2 perfect-center top-[100px] flex">
+            <img class="relative top-[10px] bottom-2 h-[30px] invert max-[1100px]:h-[20px] max-[800px]:h-[15px]" src="./assets/images/pngwing.com.png">
+            <h2 class="text-white italic max-[1100px]:text-4xl max-[800px]:text-3xl">Kachow Down Delivery</h2>
+        </div>
     </footer>
 
 </section>
