Added completed README

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </div>
               <div>
                 <label for="password" class="sr-only">Password</label>
-                <input id="phone" name="phone" type="phone" autocomplete="phone" required class="relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-gray-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="1+(123)-456-7890">
+                <input id="phone" name="phone" type="phone" autocomplete="phone" required class="relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-gray-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" placeholder="+1(123)-456-7890">
               </div>
             </div>
       
